--- a/shared/scss/views/_site-info.scss
+++ b/shared/scss/views/_site-info.scss
@@ -114,6 +114,7 @@
 .site-info__protection {
     opacity: 1;
     margin-top: 0;
+    padding-right: 10px;
 }
 
 .site-info__li--toggle {
